# TimeArtifacts

./: .gitignore  Git团队协作指南.md  README.md  init-git.bat  init-git.sh  团队分享方案.md  快速上手指南.md  报错.txt  核心代码模板.md  混合架构技术方案.md  游戏项目开发与分工建议.md  第一阶段开发计划.md  项目启动检查清单.md  项目文件结构示例.md
backend/: CMakeLists.txt  vcpkg.json
backend/include/core/: APITypes.h  GameEngine.h  GameState.h
backend/src/: main.cpp
backend/src/core/: APIHandler.cpp  APIHandler.h  EventManager.cpp  EventManager.h  Events.h  GameEngine.cpp  StateManager.cpp  StateManager.h  WebSocketServer.cpp  WebSocketServer.h
docs/: audio-getting-started.md  backend-getting-started.md  frontend-getting-started.md  gameplay-getting-started.md
frontend/: index.html  package.json  test.html
frontend/css/: main.css
frontend/js/: config.js  gameClient.js  main.js  themeManager.js  uiManager.js  utils.js
shared/data/: config.json  dialogues.json  items.json  locations.json
